[gd_scene load_steps=49 format=3 uid="uid://ccr6p41srpf4p"]

[ext_resource type="Script" path="res://src/game_scene/game_scene.gd" id="1_0wd1b"]
[ext_resource type="Script" path="res://src/game_scene/manual_timer.gd" id="2_gestc"]
[ext_resource type="Script" path="res://src/game_scene/team_container.gd" id="3_qsih1"]
[ext_resource type="Script" path="res://src/game_scene/game_time.gd" id="5_8syq6"]
[ext_resource type="Script" path="res://src/game_scene/select_unit.gd" id="6_vam2w"]
[ext_resource type="Script" path="res://src/game_scene/select_point_for_cast.gd" id="7_h82dk"]
[ext_resource type="Script" path="res://src/game_scene/select_target_for_cast.gd" id="8_n5fu4"]
[ext_resource type="Script" path="res://src/game_scene/move_item.gd" id="9_tujdk"]
[ext_resource type="Script" path="res://src/game_scene/build_tower.gd" id="10_tkjjb"]
[ext_resource type="Script" path="res://src/game_scene/mouse_state.gd" id="11_e0bvs"]
[ext_resource type="Script" path="res://src/game_scene/combat_log_storage.gd" id="12_8gb75"]
[ext_resource type="PackedScene" uid="uid://b8hcppig3r5q6" path="res://src/game_scene/game_host.tscn" id="12_sbijg"]
[ext_resource type="PackedScene" uid="uid://dp2tmdi8ms5qo" path="res://src/game_scene/game_client.tscn" id="15_a5l86"]
[ext_resource type="Script" path="res://src/game_scene/chat_commands.gd" id="16_amwbk"]
[ext_resource type="Script" path="res://src/game_scene/build_space.gd" id="16_p1jwo"]
[ext_resource type="Script" path="res://src/game_scene/tutorial_controller.gd" id="17_5cvlj"]
[ext_resource type="Script" path="res://src/game_scene/camera_controller.gd" id="17_imw8o"]
[ext_resource type="PackedScene" uid="uid://bjvafnsglmpin" path="res://src/map/map_small.tscn" id="17_td8cv"]
[ext_resource type="Script" path="res://src/creeps/wave_path.gd" id="18_m2fcq"]
[ext_resource type="PackedScene" uid="uid://u567sx64fpwa" path="res://src/missions/mission_manager.tscn" id="18_ujbrx"]
[ext_resource type="PackedScene" uid="uid://ccrjj36jwy707" path="res://src/player/camera_origin.tscn" id="19_icnp7"]
[ext_resource type="Script" path="res://src/effects/effects_container.gd" id="20_rnpn6"]
[ext_resource type="PackedScene" uid="uid://djkt0t0jveoks" path="res://src/effects/vampiric_aura.tscn" id="21_5ytv3"]
[ext_resource type="PackedScene" uid="uid://db0630tccvc2i" path="res://src/towers/tower_preview.tscn" id="22_53ta1"]
[ext_resource type="Shader" path="res://resources/shaders/saturation_burn.gdshader" id="23_go3nh"]
[ext_resource type="Shader" path="res://resources/shaders/foggy_camera.gdshader" id="24_omg4c"]
[ext_resource type="PackedScene" uid="uid://cngv1rgplre2c" path="res://src/ui/hud/hud.tscn" id="25_m068l"]
[ext_resource type="PackedScene" uid="uid://4dakdefm73rd" path="res://src/ui/hud/builder_menu.tscn" id="26_2bi2s"]
[ext_resource type="PackedScene" uid="uid://hiex318b5cvk" path="res://src/ui/game_menu/game_menu.tscn" id="26_xukvx"]
[ext_resource type="PackedScene" uid="uid://u1yl8rbswhtp" path="res://src/ui/hud/tutorial_menu.tscn" id="27_vroom"]

[sub_resource type="Curve2D" id="1"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 2555, -2374, 0, 0, 0, 0, -376, -882, 3.76354, -42.3398, -3.76354, 42.3398, -426, -827, 0, 0, 0, 0, -386, -759, 0, 0, 0, 0, 384, -373, -36.6945, -0.470442, 36.6945, 0.470442, 500, -341, 0, 0, 0, 0, 643, -372, 0, 0, 0, 0, 2050, -1077, -45.8031, 3.23768, 45.8031, -3.23768, 2174, -1124, 0, 0, 0, 0, 2309, -1077, 0, 0, 0, 0, 3071, -689, 1.40535, -33.4014, -1.40535, 33.4014, 3131, -625, 0, 0, 0, 0, 3075, -562, 0, 0, 0, 0, 642, 647, 40.458, 0.470442, -40.458, -0.470442, 515, 695, 0, 0, 0, 0, 388, 648, 0, 0, 0, 0, -897, 9, 45.1023, 0.136732, -45.1023, -0.136732, -1022, -33, 0, 0, 0, 0, -1152, 8, 0, 0, 0, 0, -1920, 394, -0.840896, -31.3902, 0.840896, 31.3902, -1961, 459, 0, 0, 0, 0, -1919, 521, 0, 0, 0, 0, -640, 1163, 0.379654, -32.8072, -0.379654, 32.8072, -603, 1228, 0, 0, 0, 0, -641, 1290, 0, 0, 0, 0, -3200, 2558)
}
point_count = 26

[sub_resource type="Curve2D" id="Curve2D_72x3r"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 2558, -2376, 0, 0, 0, 0, 1540, -1845, 0, 0, 0, 0, 1537, 206, 0, 0, 0, 0, -1536, 188, 0, 0, 0, 0, -1149, 1536, 0, 0, 0, 0, -3198, 2557)
}
point_count = 6

[sub_resource type="Curve2D" id="Curve2D_u40fb"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 6655, -324, 0, 0, 0, 0, 3712, 1167, 67.4238, 0.374577, -67.4238, -0.374577, 3585, 1199, 0, 0, 0, 0, 3457, 1165, 0, 0, 0, 0, 2689, 780, 0.471937, 35.3953, -0.471937, -35.3953, 2652, 717, 0, 0, 0, 0, 2689, 654, 0, 0, 0, 0, 4097, -50, 0, 39.1708, 0, -39.1708, 4130, -114, 0, 0, 0, 0, 4097, -177, 0, 0, 0, 0, 3330, -563, 41.0585, -1.41581, -41.0585, 1.41581, 3199, -597, 0, 0, 0, 0, 3075, -559, 0, 0, 0, 0, 641, 650, 1.5, -34.5, -1.5, 34.5, 607, 711, 0, 0, 0, 0, 638, 776, 0, 0, 0, 0, 1922, 1420, 1, -39.5, -1, 39.5, 1958, 1483, 0, 0, 0, 0, 1916, 1546, 0, 0, 0, 0, 1151, 1927, 54.5, -1.5, -54.5, 1.5, 1020, 1952, 0, 0, 0, 0, 897, 1929, 0, 0, 0, 0, -387, 1288, 54.5, 1, -54.5, -1, -517, 1253, 0, 0, 0, 0, -639, 1287, 0, 0, 0, 0, -3200, 2559)
}
point_count = 26

[sub_resource type="Curve2D" id="Curve2D_gtbgo"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 6658, -328, 0, 0, 0, 0, 5637, 189, 0, 0, 0, 0, 1535, 202, 0, 0, 0, 0, 1540, 1729, 0, 0, 0, 0, -1149, 1537, 0, 0, 0, 0, -3203, 2561)
}
point_count = 6

[sub_resource type="Curve2D" id="Curve2D_cq3y7"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 6656, 5447, 0, 0, 0, 0, 3709, 3975, 127.961, -62.2966, -127.961, 62.2966, 3457, 3976, 0, 0, 0, 0, 2688, 4357, -127.356, -61.4306, 127.356, 61.4306, 2689, 4489, 0, 0, 0, 0, 3966, 5131, 122.053, -63.6993, -122.053, 63.6993, 3969, 5257, 0, 0, 0, 0, 3199, 5642, 125.865, 63.6396, -125.865, -63.6396, 2946, 5640, 0, 0, 0, 0, 639, 4490, -123.648, 66.0712, 123.648, -66.0712, 640, 4360, 0, 0, 0, 0, 1918, 3720, 130.767, 63.4191, -130.767, -63.4191, 1916, 3593, 0, 0, 0, 0, 1153, 3208, 127.423, -62.7676, -127.423, 62.7676, 897, 3209, 0, 0, 0, 0, -384, 3850, 128.195, 66.7462, -128.195, -66.7462, -640, 3848, 0, 0, 0, 0, -3201, 2563)
}
point_count = 18

[sub_resource type="Curve2D" id="Curve2D_46yp1"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 6656, 5451, 0, 0, 0, 0, 5631, 4937, 0, 0, 0, 0, 1536, 4937, 0, 0, 0, 0, 1539, 3403, 0, 0, 0, 0, -1152, 3592, 0, 0, 0, 0, -3202, 2563)
}
point_count = 6

[sub_resource type="Curve2D" id="Curve2D_pp4lg"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 2562, 7498, 0, 0, 0, 0, -383, 6026, -131.328, 67.909, 131.328, -67.909, -380, 5895, 0, 0, 0, 0, 379, 5511, -125.155, -62.8579, 125.155, 62.8579, 636, 5513, 0, 0, 0, 0, 1921, 6154, -130.5, 64, 130.5, -64, 2178, 6154, 0, 0, 0, 0, 2941, 5770, 124.487, 63.5678, -124.487, -63.5678, 2945, 5641, 0, 0, 0, 0, 639, 4492, 128.812, -66.742, -128.812, 66.742, 381, 4492, 0, 0, 0, 0, -897, 5130, 126.5, 66, -126.5, -66, -1152, 5129, 0, 0, 0, 0, -1922, 4745, -126.81, 65.4072, 126.81, -65.4072, -1921, 4618, 0, 0, 0, 0, -639, 3977, 123.5, 66, -123.5, -66, -638, 3848, 0, 0, 0, 0, -3200, 2563)
}
point_count = 18

[sub_resource type="Curve2D" id="Curve2D_rkhsb"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 2562, 7497, 0, 0, 0, 0, 1532, 6986, 0, 0, 0, 0, 1535, 4938, 0, 0, 0, 0, -1537, 4938, 0, 0, 0, 0, -1152, 3593, 0, 0, 0, 0, -3201, 2562)
}
point_count = 6

[sub_resource type="Curve2D" id="Curve2D_bg1uo"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -8959, 7496, 0, 0, 0, 0, -6018, 6026, 131, 64.5, -131, -64.5, -6019, 5898, 0, 0, 0, 0, -6783, 5515, 130.813, -63.028, -130.813, 63.028, -7041, 5514, 0, 0, 0, 0, -8448, 6218, 127.961, 65.1028, -127.961, -65.1028, -8705, 6217, 0, 0, 0, 0, -9473, 5835, -124.032, 65.664, 124.032, -65.664, -9474, 5705, 0, 0, 0, 0, -7040, 4487, -132.548, -65.0834, 132.548, 65.0834, -6780, 4489, 0, 0, 0, 0, -5507, 5129, -130.727, 62.2957, 130.727, -62.2957, -5251, 5128, 0, 0, 0, 0, -4483, 4747, 123.957, 64.0975, -123.957, -64.0975, -4478, 4617, 0, 0, 0, 0, -5762, 3975, -124.102, 66.1459, 124.102, -66.1459, -5761, 3849, 0, 0, 0, 0, -3202, 2562)
}
point_count = 18

[sub_resource type="Curve2D" id="Curve2D_6lk1i"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -8958, 7494, 0, 0, 0, 0, -7933, 6984, 0, 0, 0, 0, -7940, 4935, 0, 0, 0, 0, -4864, 4935, 0, 0, 0, 0, -5252, 3592, 0, 0, 0, 0, -3203, 2561)
}
point_count = 6

[sub_resource type="Curve2D" id="Curve2D_mksiu"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -13060, 5441, 0, 0, 0, 0, -10114, 3978, -129.029, -64.8118, 129.029, 64.8118, -9855, 3978, 0, 0, 0, 0, -9087, 4359, 124.102, -61.7361, -124.102, 61.7361, -9088, 4488, 0, 0, 0, 0, -10498, 5192, -124.451, -62.9325, 124.451, 62.9325, -10497, 5321, 0, 0, 0, 0, -9730, 5704, -131.903, 64.0975, 131.903, -64.0975, -9470, 5706, 0, 0, 0, 0, -7040, 4487, 126.595, 63.8929, -126.595, -63.8929, -7043, 4363, 0, 0, 0, 0, -8321, 3721, -127, 67, 127, -67, -8320, 3592, 0, 0, 0, 0, -7552, 3208, -126.5, -63, 126.5, 63, -7297, 3207, 0, 0, 0, 0, -6016, 3849, -125, 62, 125, -62, -5761, 3851, 0, 0, 0, 0, -3201, 2563)
}
point_count = 18

[sub_resource type="Curve2D" id="Curve2D_niioj"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -13059, 5446, 0, 0, 0, 0, -12033, 4936, 0, 0, 0, 0, -7939, 4934, 0, 0, 0, 0, -7940, 3403, 0, 0, 0, 0, -5252, 3593, 0, 0, 0, 0, -3201, 2565)
}
point_count = 6

[sub_resource type="Curve2D" id="Curve2D_l5rss"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -13053, -317, 0, 0, 0, 0, -10110, 1160, -126.277, 64.5416, 126.277, -64.5416, -9858, 1160, 0, 0, 0, 0, -9088, 777, 122.138, 66.0746, -122.138, -66.0746, -9086, 649, 0, 0, 0, 0, -10370, 11, -125.865, 65.0538, 125.865, -65.0538, -10365, -120, 0, 0, 0, 0, -9602, -505, -126.076, -70.984, 126.076, 70.984, -9348, -503, 0, 0, 0, 0, -7039, 647, 112.246, -67.3477, -112.246, 67.3477, -7040, 775, 0, 0, 0, 0, -8322, 1414, -129.18, -59.6902, 129.18, 59.6902, -8320, 1544, 0, 0, 0, 0, -7551, 1928, -125.158, 65.0538, 125.158, -65.0538, -7298, 1929, 0, 0, 0, 0, -6016, 1286, -125.617, -63.2538, 125.617, 63.2538, -5759, 1286, 0, 0, 0, 0, -3201, 2560)
}
point_count = 18

[sub_resource type="Curve2D" id="Curve2D_xs7e3"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -13054, -312, 0, 0, 0, 0, -12026, 203, 0, 0, 0, 0, -7937, 201, 0, 0, 0, 0, -7933, 1736, 0, 0, 0, 0, -5251, 1546, 0, 0, 0, 0, -3201, 2559)
}
point_count = 6

[sub_resource type="Curve2D" id="Curve2D_8wjuw"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -8959, -2358, 0, 0, 0, 0, -6017, -886, 126.572, -60.1041, -126.572, 60.1041, -6020, -762, 0, 0, 0, 0, -6780, -372, 129.784, 65.157, -129.784, -65.157, -7038, -375, 0, 0, 0, 0, -8321, -1014, 132.292, -64.8859, -132.292, 64.8859, -8577, -1014, 0, 0, 0, 0, -9343, -630, -120.11, -61.8388, 120.11, 61.8388, -9346, -503, 0, 0, 0, 0, -7037, 648, -132.292, 64.256, 132.292, -64.256, -6780, 648, 0, 0, 0, 0, -5504, 8, -123.037, -64.3467, 123.037, 64.3467, -5250, 10, 0, 0, 0, 0, -4479, 392, 122.805, -60.7352, -122.805, 60.7352, -4479, 519, 0, 0, 0, 0, -5764, 1161, -116.097, -61.3518, 116.097, 61.3518, -5762, 1285, 0, 0, 0, 0, -3206, 2557)
}
point_count = 18

[sub_resource type="Curve2D" id="Curve2D_sd1kw"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -8958, -2360, 0, 0, 0, 0, -7936, -1847, 0, 0, 0, 0, -7938, 201, 0, 0, 0, 0, -4863, 199, 0, 0, 0, 0, -5243, 1545, 0, 0, 0, 0, -3205, 2562)
}
point_count = 6

[sub_resource type="ShaderMaterial" id="ShaderMaterial_cij5r"]
shader = ExtResource("23_go3nh")
shader_parameter/vignette_intensity = 1.214
shader_parameter/edge_saturation = 0.174

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6fevd"]
shader = ExtResource("24_omg4c")
shader_parameter/vignette_intensity = 0.299
shader_parameter/vignette_opacity = 0.742
shader_parameter/vignette_rgb = Color(0, 0, 0.129412, 1)

[node name="GameScene" type="Node" node_paths=PackedStringArray("_game_menu", "_hud", "_map_small", "_camera", "_camera_controller", "_team_container", "_game_start_timer", "_select_point_for_cast", "_select_target_for_cast", "_move_item", "_select_unit", "_build_tower", "_mouse_state", "_game_client", "_game_time", "_pause_shadow_rect", "_shadow_below_builder_menu", "_shadow_above_builder_menu", "_object_container", "_build_space", "_tutorial_menu", "_tutorial_controller", "_builder_menu", "_range_checker")]
process_mode = 3
script = ExtResource("1_0wd1b")
_game_menu = NodePath("UI/GameMenu")
_hud = NodePath("UI/HUD")
_map_small = NodePath("World/MapSmall")
_camera = NodePath("World/Camera2D")
_camera_controller = NodePath("Gameplay/CameraController")
_team_container = NodePath("Gameplay/TeamContainer")
_game_start_timer = NodePath("Gameplay/GameStartTimer")
_select_point_for_cast = NodePath("Gameplay/SelectPointForCast")
_select_target_for_cast = NodePath("Gameplay/SelectTargetForCast")
_move_item = NodePath("Gameplay/MoveItem")
_select_unit = NodePath("Gameplay/SelectUnit")
_build_tower = NodePath("Gameplay/BuildTower")
_mouse_state = NodePath("Gameplay/MouseState")
_game_client = NodePath("Gameplay/GameClient")
_game_time = NodePath("Gameplay/GameTime")
_pause_shadow_rect = NodePath("UI/PauseShadowRect")
_shadow_below_builder_menu = NodePath("UI/ShadowBelowBuilderMenu")
_shadow_above_builder_menu = NodePath("UI/ShadowAboveBuilderMenu")
_object_container = NodePath("World/ObjectContainer")
_build_space = NodePath("Gameplay/BuildSpace")
_tutorial_menu = NodePath("UI/VBoxContainer/TutorialMenu")
_tutorial_controller = NodePath("Gameplay/TutorialController")
_builder_menu = NodePath("UI/BuilderMenu")
_range_checker = NodePath("World/RangeChecker")

[node name="Gameplay" type="Node" parent="."]
process_mode = 1

[node name="GameStartTimer" type="Node" parent="Gameplay"]
script = ExtResource("2_gestc")
one_shot = true

[node name="TeamContainer" type="Node" parent="Gameplay"]
script = ExtResource("3_qsih1")

[node name="GameTime" type="Node" parent="Gameplay"]
script = ExtResource("5_8syq6")

[node name="SelectUnit" type="Node" parent="Gameplay" node_paths=PackedStringArray("_game_client")]
script = ExtResource("6_vam2w")
_game_client = NodePath("../GameClient")

[node name="SelectPointForCast" type="Node" parent="Gameplay" node_paths=PackedStringArray("_mouse_state", "_game_client")]
script = ExtResource("7_h82dk")
_mouse_state = NodePath("../MouseState")
_game_client = NodePath("../GameClient")

[node name="SelectTargetForCast" type="Node" parent="Gameplay" node_paths=PackedStringArray("_mouse_state", "_game_client")]
script = ExtResource("8_n5fu4")
_mouse_state = NodePath("../MouseState")
_game_client = NodePath("../GameClient")

[node name="MoveItem" type="Node" parent="Gameplay" node_paths=PackedStringArray("_mouse_state", "_world", "_game_client")]
script = ExtResource("9_tujdk")
_mouse_state = NodePath("../MouseState")
_world = NodePath("../../World")
_game_client = NodePath("../GameClient")

[node name="BuildTower" type="Node" parent="Gameplay" node_paths=PackedStringArray("_mouse_state", "_build_space", "_tower_preview", "_game_client")]
script = ExtResource("10_tkjjb")
_mouse_state = NodePath("../MouseState")
_build_space = NodePath("../BuildSpace")
_tower_preview = NodePath("../../World/TowerPreview")
_game_client = NodePath("../GameClient")

[node name="MouseState" type="Node" parent="Gameplay"]
script = ExtResource("11_e0bvs")

[node name="CombatLogStorage" type="Node" parent="Gameplay"]
script = ExtResource("12_8gb75")

[node name="GameHost" parent="Gameplay" node_paths=PackedStringArray("_game_client", "_hud") instance=ExtResource("12_sbijg")]
_game_client = NodePath("../GameClient")
_hud = NodePath("../../UI/HUD")

[node name="GameClient" parent="Gameplay" node_paths=PackedStringArray("_game_host", "_game_time", "_hud", "_build_space", "_chat_commands", "_select_unit") instance=ExtResource("15_a5l86")]
_game_host = NodePath("../GameHost")
_game_time = NodePath("../GameTime")
_hud = NodePath("../../UI/HUD")
_build_space = NodePath("../BuildSpace")
_chat_commands = NodePath("../ChatCommands")
_select_unit = NodePath("../SelectUnit")

[node name="ChatCommands" type="Node" parent="Gameplay" node_paths=PackedStringArray("_team_container", "_hud", "_game_client", "_range_checker")]
script = ExtResource("16_amwbk")
_team_container = NodePath("../TeamContainer")
_hud = NodePath("../../UI/HUD")
_game_client = NodePath("../GameClient")
_range_checker = NodePath("../../World/RangeChecker")

[node name="BuildSpace" type="Node" parent="Gameplay"]
script = ExtResource("16_p1jwo")

[node name="TutorialController" type="Node" parent="Gameplay"]
script = ExtResource("17_5cvlj")

[node name="CameraController" type="Node" parent="Gameplay" node_paths=PackedStringArray("_camera")]
script = ExtResource("17_imw8o")
_camera = NodePath("../../World/Camera2D")

[node name="MissionManager" parent="Gameplay" node_paths=PackedStringArray("_hud") instance=ExtResource("18_ujbrx")]
_hud = NodePath("../../UI/HUD")

[node name="World" type="Node2D" parent="."]
process_mode = 1
y_sort_enabled = true

[node name="MapSmall" parent="World" instance=ExtResource("17_td8cv")]

[node name="PathContainer" type="Node2D" parent="World"]
z_index = 999

[node name="Ground0" type="Path2D" parent="World/PathContainer"]
curve = SubResource("1")
script = ExtResource("18_m2fcq")

[node name="Air0" type="Path2D" parent="World/PathContainer"]
curve = SubResource("Curve2D_72x3r")
script = ExtResource("18_m2fcq")
is_air = true

[node name="Ground1" type="Path2D" parent="World/PathContainer"]
modulate = Color(0.52549, 0.329412, 0, 1)
curve = SubResource("Curve2D_u40fb")
script = ExtResource("18_m2fcq")
player_id = 1

[node name="Air1" type="Path2D" parent="World/PathContainer"]
modulate = Color(1, 0, 1, 1)
curve = SubResource("Curve2D_gtbgo")
script = ExtResource("18_m2fcq")
is_air = true
player_id = 1

[node name="Ground2" type="Path2D" parent="World/PathContainer"]
curve = SubResource("Curve2D_cq3y7")
script = ExtResource("18_m2fcq")
player_id = 2

[node name="Air2" type="Path2D" parent="World/PathContainer"]
curve = SubResource("Curve2D_46yp1")
script = ExtResource("18_m2fcq")
is_air = true
player_id = 2

[node name="Ground3" type="Path2D" parent="World/PathContainer"]
curve = SubResource("Curve2D_pp4lg")
script = ExtResource("18_m2fcq")
player_id = 3

[node name="Air3" type="Path2D" parent="World/PathContainer"]
curve = SubResource("Curve2D_rkhsb")
script = ExtResource("18_m2fcq")
is_air = true
player_id = 3

[node name="Ground4" type="Path2D" parent="World/PathContainer"]
curve = SubResource("Curve2D_bg1uo")
script = ExtResource("18_m2fcq")
player_id = 4

[node name="Air4" type="Path2D" parent="World/PathContainer"]
curve = SubResource("Curve2D_6lk1i")
script = ExtResource("18_m2fcq")
is_air = true
player_id = 4

[node name="Ground5" type="Path2D" parent="World/PathContainer"]
curve = SubResource("Curve2D_mksiu")
script = ExtResource("18_m2fcq")
player_id = 5

[node name="Air5" type="Path2D" parent="World/PathContainer"]
curve = SubResource("Curve2D_niioj")
script = ExtResource("18_m2fcq")
is_air = true
player_id = 5

[node name="Ground6" type="Path2D" parent="World/PathContainer"]
curve = SubResource("Curve2D_l5rss")
script = ExtResource("18_m2fcq")
player_id = 6

[node name="Air6" type="Path2D" parent="World/PathContainer"]
curve = SubResource("Curve2D_xs7e3")
script = ExtResource("18_m2fcq")
is_air = true
player_id = 6

[node name="Ground7" type="Path2D" parent="World/PathContainer"]
curve = SubResource("Curve2D_8wjuw")
script = ExtResource("18_m2fcq")
player_id = 7

[node name="Air7" type="Path2D" parent="World/PathContainer"]
curve = SubResource("Curve2D_sd1kw")
script = ExtResource("18_m2fcq")
is_air = true
player_id = 7

[node name="CameraOriginContainer" type="Node2D" parent="World"]

[node name="CameraOrigin0" parent="World/CameraOriginContainer" instance=ExtResource("19_icnp7")]
position = Vector2(900, -1300)

[node name="CameraOrigin1" parent="World/CameraOriginContainer" instance=ExtResource("19_icnp7")]
position = Vector2(4000, 400)
player_id = 1

[node name="CameraOrigin2" parent="World/CameraOriginContainer" instance=ExtResource("19_icnp7")]
position = Vector2(3957, 4454)
player_id = 2

[node name="CameraOrigin3" parent="World/CameraOriginContainer" instance=ExtResource("19_icnp7")]
position = Vector2(817, 5984)
player_id = 3

[node name="CameraOrigin4" parent="World/CameraOriginContainer" instance=ExtResource("19_icnp7")]
position = Vector2(-7345, 6149)
player_id = 4

[node name="CameraOrigin5" parent="World/CameraOriginContainer" instance=ExtResource("19_icnp7")]
position = Vector2(-10235, 4538)
player_id = 5

[node name="CameraOrigin6" parent="World/CameraOriginContainer" instance=ExtResource("19_icnp7")]
position = Vector2(-10061, 638)
player_id = 6

[node name="CameraOrigin7" parent="World/CameraOriginContainer" instance=ExtResource("19_icnp7")]
position = Vector2(-7166, -1087)
player_id = 7

[node name="ObjectContainer" type="Node2D" parent="World"]
y_sort_enabled = true

[node name="EffectsContainer" type="Node2D" parent="World"]
script = ExtResource("20_rnpn6")

[node name="VampiricAura" parent="World/EffectsContainer" instance=ExtResource("21_5ytv3")]
modulate = Color(0.341176, 0.72549, 0.992157, 0.901961)
z_index = 9
position = Vector2(-3200, 2560)
scale = Vector2(6, 3)
autoplay = "default"
frame_progress = 0.0

[node name="FloatingTextContainer" type="Node2D" parent="World"]
z_index = 1000

[node name="Camera2D" type="Camera2D" parent="World"]
z_index = 1000
position = Vector2(2.08165e-12, 2.08165e-12)
scale = Vector2(0.31481, 0.5)
limit_smoothed = true
editor_draw_limits = true
editor_draw_drag_margin = true

[node name="TowerPreview" parent="World" node_paths=PackedStringArray("_build_space") instance=ExtResource("22_53ta1")]
visible = false
z_index = 100
_build_space = NodePath("../../Gameplay/BuildSpace")

[node name="RangeChecker" parent="World" node_paths=PackedStringArray("_build_space") instance=ExtResource("22_53ta1")]
visible = false
modulate = Color(1, 1, 1, 0.784314)
z_index = 100
_build_space = NodePath("../../Gameplay/BuildSpace")

[node name="UI" type="CanvasLayer" parent="."]

[node name="DesaturationFilter" type="ColorRect" parent="UI"]
material = SubResource("ShaderMaterial_cij5r")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="VignetteFilter" type="ColorRect" parent="UI"]
material = SubResource("ShaderMaterial_6fevd")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="HUD" parent="UI" instance=ExtResource("25_m068l")]
unique_name_in_owner = true
process_mode = 1
size_flags_horizontal = 1
mouse_filter = 2

[node name="ShadowBelowBuilderMenu" type="ColorRect" parent="UI"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_force_pass_scroll_events = false
color = Color(0, 0, 0, 0.392157)

[node name="BuilderMenu" parent="UI" instance=ExtResource("26_2bi2s")]
visible = false
offset_left = -350.0
offset_top = -300.0
offset_right = 350.0
offset_bottom = 300.0

[node name="PauseShadowRect" type="ColorRect" parent="UI"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.392157)

[node name="ShadowAboveBuilderMenu" type="ColorRect" parent="UI"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_force_pass_scroll_events = false
color = Color(0, 0, 0, 0.392157)

[node name="GameMenu" parent="UI" instance=ExtResource("26_xukvx")]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -121.5
offset_top = -192.5
offset_right = 121.5
offset_bottom = 192.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="TutorialMenu" parent="UI/VBoxContainer" instance=ExtResource("27_vroom")]
process_mode = 3
visible = false
layout_mode = 2

[connection signal="timeout" from="Gameplay/GameStartTimer" to="." method="_on_game_start_timer_timeout"]
[connection signal="received_first_timeslot" from="Gameplay/GameClient" to="." method="_on_game_client_received_first_timeslot"]
[connection signal="tutorial_triggered" from="Gameplay/TutorialController" to="." method="_on_tutorial_controller_tutorial_triggered"]
[connection signal="finished" from="UI/BuilderMenu" to="." method="_on_builder_menu_finished"]
[connection signal="continue_pressed" from="UI/GameMenu" to="." method="_on_game_menu_continue_pressed"]
[connection signal="quit_pressed" from="UI/GameMenu" to="." method="_on_game_menu_quit_pressed"]
[connection signal="hidden" from="UI/VBoxContainer/TutorialMenu" to="." method="_on_tutorial_menu_hidden"]
